FIX contact us page responsiveness for landscape phone with media query and extra padding

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -530,3 +530,16 @@ input:focus, textarea:focus, select:focus {
 
     
 }
+
+@media only screen and (min-width: 570px) and (max-width: 768px) {
+     
+       .padding {
+        padding: 10em;
+    }
+
+        .extra-space {
+         padding: 0 2em;   
+        }
+
+    
+}
